src/app/common/components/screens/ProfileScreen/GetFollowersDialog.scss
/*
	componentPath: src/app/common/components/screens/ProfileScreen/GetFollowersDialog
	cssComponentId: get-followers-dialog_woa1zs
*/

.get-followers-dialog_woa1zs > .children > .url {
	margin-top: 10px;
	text-align: center;
}
.get-followers-dialog_woa1zs > .children > .url > .share-control_mnbspk > .children {
	display: flex;
}
.get-followers-dialog_woa1zs > .children > .url > .share-control_mnbspk > .children > .icon_rour3d {
	margin-left: 10px;
}

